--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <head>
+    <link href="https://sigmoid.social/@isws" rel="me">
+  </head>
   <body>
     <title>ISWS 2025</title>
     <iframe src="https://nicolaslazzari3.wixsite.com/isws25" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
